# bookstore-mas-ontology

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  schemas.py  simulation_manager.py
bms/: __init__.py  config.py
bms/data/: __init__.py  bookstore_ontology.owl  catalog-v001.xml  sample_customers.json  sample_inventory.json
bms/ontology/: __init__.py  builder.py  rules.py
bms/simulation/: __init__.py  agents.py  message_bus.py  model.py  policies.py  state.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Controls.tsx  CustomersPanel.tsx  InventoryTable.tsx  KpiCard.tsx  OrdersTable.tsx
frontend/src/components/charts/: InventoryTrend.tsx  SalesByGenre.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx
frontend/src/lib/: api.ts  query.tsx  utils.ts
frontend/src/pages/: Dashboard.tsx
scripts/: run_simulation.py
tests/: test_smoke.py
